--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ classifiers =
     Programming Language :: Python
 
 [options]
+packages = find:
+package_dir = = ./
 install_requires =
     click >=8.1.3
     stix2 >=3.0.1
